<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CooperApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_new">Nueva cuenta</string>
    <string name="title_activity_new_count">Nueva Cuenta</string>
    <string name="label_name">NOMBRE</string>
    <string name="name">Botana para la fiesta</string>
    <string name="label_lot">CANTIDAD TOTAL</string>
    <string name="lot">$200</string>
    <string name="label_date_time">FECHA Y HORA</string>
    <string name="save_count">Guardar Cuenta</string>
    <string name="add_person">Añadir Persona</string>
    <string name="save_person">Guardar Persona</string>
    <string name="action_delete">Eliminar cuenta</string>
    <string name="action_edit">Editar</string>
    <string name="action_accept">Saldar</string>
    <string name="title_activity_detalle_count">Detalle de la cuenta</string>
    <string name="total">Total</string>
    <string name="label_name_person">NOMBRE</string>
    <string name="name_person">Jhon Doe</string>
    <string name="label_lot_person">CANTIDAD</string>
    <string name="lot_person">$50</string>
    <string name="title_activity_add_person">AddPerson</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_count">Nueva Cuenta</string>
    <string name="title_activity_add">Nueva Persona</string>
    <string name="tCountDeleteTitle">Eliminar</string>
    <string name="tCountDeleteMessage">Estas seguro de eliminar la cuenta: {count}.</string>
    <string name="tCountDeletePositive">Borrar</string>
    <string name="tCountDeleteNegative">Cancelar</string>
    <string name="tCountUpdatePositive">Aceptar</string>
    <string name="tCountUpdateNegative">Cancelar</string>
    <string name="accounts_slope">Pendientes</string>
    <string name="accounts_repaid">Saldadas</string>
    <string name="id">{id}</string>
    <string name="name_count">{name}</string>
    <string name="lot_count">{lot}</string>
    <string name="lot_user">Cantidad dada: $ {lot} pesos \n{cant}</string>
    <string name="ok">Ok</string>
    <string name="tUserDeleteMessage">Estas seguro de eliminar a {count}.</string>
    <string name="title_section1">Pendientes</string>
    <string name="title_section2">Saldadas</string>
    <string name="no_counts_slope">Agrega una cuenta</string>
    <string name="no_counts_reapid">Ninguna cuenta saldada</string>
    <string name="ready_cooper">Listos para cooperar!</string>
    <string name="message">Cuenta saldada!</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_hecho">Hecho</string>
</resources>
