<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alfredobarron.examen.AddPerson">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name_person"
            android:textStyle="bold"
            android:textSize="15dp"
            android:ellipsize="marquee"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_below="@id/l1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#828080"
        android:orientation="horizontal"
        />

    <LinearLayout
        android:id="@+id/l3"
        android:layout_below="@id/l2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_person"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_person"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_below="@id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_lot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lot_person"
            android:textStyle="bold"
            android:textSize="15dp"
            android:ellipsize="marquee"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l5"
        android:layout_below="@id/l4"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#828080"
        android:orientation="horizontal"
        />

    <LinearLayout
        android:id="@+id/l6"
        android:layout_below="@id/l5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/lot_person"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lot_person"
            android:inputType="number|numberDecimal"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_person"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_person"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="savePerson"/>

</RelativeLayout>
