<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alfredobarron.examen.DetailCount">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/total"
            android:text="@string/lot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="20dp"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_below="@id/l1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#828080"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        />

    <ListView
        android:id="@+id/list"
        android:layout_marginTop="5dp"
        android:layout_below="@id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_person"></ListView>

    <TextView android:id="@android:id/empty"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/ready_cooper"
              android:fontFamily="sans-serif-light"
              android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/add_person"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_person"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addPerson"/>

</RelativeLayout>
