<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textStyle="bold"
            android:textSize="15dp"
            android:ellipsize="marquee"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_below="@id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_below="@id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/label_lot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lot"
            android:textStyle="bold"
            android:textSize="15dp"
            android:ellipsize="marquee"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_below="@id/l3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/lot_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lot"
            android:inputType="number|numberDecimal"/>

    </LinearLayout>


</LinearLayout>